--- a/metadata.yaml
+++ b/metadata.yaml
@@ -36,5 +36,6 @@ subjects:
 - !lcsh 'Obedience -- Juvenile fiction'
 - !lcc 'PZ'
 - !lcsh 'Temper -- Juvenile fiction'
+- GITenberg
 title: Little Frankie and His Cousin
 url: http://www.gutenberg.org/ebooks/33522
